--- a/theScolioTalk.html
+++ b/theScolioTalk.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -73,11 +73,11 @@
                             <div class="card-nav mt-3">
                                 <div class="row">
                                     <!--Card Heading-->
-                                    <div class="col-lg-8">
+                                    <div class="col-lg-8" data-aos="fade">
                                         <h2 class="blog-heading"><span class="ml-2">Scolios Talk</span></h2>
                                     </div>
                                     <!--Card Search box-->
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4" data-aos="fade">
                                         <form action="">
                                             <div class="input-group">
                                                 <input type="text" class="form-control search-input mt-1" placeholder="Search">
@@ -97,7 +97,7 @@
                             <div class="row blog">
                                 <!--Blog List-->
                                 <div class="col-md-8">
-                                    <article class="blog-post mb-3 py-4 px-4">
+                                    <article class="blog-post mb-3 py-4 px-4" data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -121,7 +121,7 @@
                                         </div>
                                     </article>
 
-                                    <article class="blog-post mb-3 py-4 px-4">
+                                    <article class="blog-post mb-3 py-4 px-4" data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -145,7 +145,7 @@
                                         </div>
                                     </article>
 
-                                    <article class="blog-post mb-3 py-4 px-4">
+                                    <article class="blog-post mb-3 py-4 px-4" data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -169,7 +169,7 @@
                                         </div>
                                     </article>
 
-                                    <article class="blog-post mb-3 py-4 px-4 ">
+                                    <article class="blog-post mb-3 py-4 px-4 " data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -193,7 +193,7 @@
                                         </div>
                                     </article>
 
-                                    <article class="blog-post mb-3 py-4 px-4">
+                                    <article class="blog-post mb-3 py-4 px-4" data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -217,7 +217,7 @@
                                         </div>
                                     </article>
 
-                                    <article class="blog-post mb-3 py-4 px-4">
+                                    <article class="blog-post mb-3 py-4 px-4" data-aos="fade-up">
                                         <div class="row">
                                             <!--Blog Image-->
                                             <div class="col-sm-4">
@@ -242,7 +242,7 @@
                                     </article>
 
                                     <!--Pagination-->
-                                    <nav>
+                                    <nav data-aos="fade-up">
                                         <ul class="pagination justify-content-center">
                                             <li class="page-item">
                                                 <a href="#" class="page-link py-2 px-3">
@@ -270,7 +270,7 @@
                                 <!--Categories/ Top Articles-->
                                 <div class="col-md-4">
                                     <!--Categories-->
-                                    <div class="container category">
+                                    <div class="container category" data-aos="fade-left">
                                         <h3 class="category-list pt-2"><span class="ml-2">Categories</span></h3>
                                         <div class="categories m-0">
                                             <a href="#" class="nav-link">News</a>
@@ -290,7 +290,7 @@
                                     </div>
 
                                     <!--Top  articles-->
-                                    <div class="container mt-4">
+                                    <div class="container mt-4" data-aos="fade-left">
                                         <h3 class="top-articles"><span class="ml-2">Top Articles</span></h3>
                                         <article>
                                             <div class="row">
@@ -386,7 +386,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -417,5 +417,11 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
 </hmtl>
