--- a/Admin/adminAddArticle.html
+++ b/Admin/adminAddArticle.html
@@ -25,12 +25,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -145,7 +145,7 @@
         </div>
 
         <!--Main Body-->
-        <main class="eventEdit">
+        <main class="addArticle">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
@@ -154,7 +154,7 @@
                         <div class="row pt-md-5 mt-md-5 mb-md-3 heading-section">
                             <div class="col-lg-7 col-sm-5 ml-5">
                                 <p class="text-muted ml-5 path">
-                                    <a href="adminBlog.html" class="text-muted">Blogs</a> 
+                                    <a href="adminBlog.html" class="text-muted">The ScolioTalk</a> 
                                     <i class="fas fa-chevron-right"></i>
                                     Add Article
                                 </p>
@@ -184,13 +184,7 @@
 
                                                 <label for="articleTag" class="text-muted">Article Tag</label>
                                                 <br>
-                                                <select class="custom-select" id="articleTag">
-                                                    <option selected>Open this select menu</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
-                                                </select>
-                                                <br>
+                                                <input type="text" id="articleTag" class="form-control eventName" placeholder="Article Tag" required>
                                                 <br>
 
                                                 <label for="articleDescription" class="text-muted">Short Description (Appears on the cards)</label>
@@ -222,7 +216,7 @@
                                 </div>
 
                                 <!--Upload-->
-                                <div class="update text-center mb-5">
+                                <div class="upload text-center mb-5">
                                     <button type="submit" class="btn btn-success"  onclick="">Upload Article</button>
                                 </div>
                             </form>
@@ -238,7 +232,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="js/animation.js" type="text/javascript"></script>
+    
     <script type="text/javascript" src="js/functionality.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
