--- a/Admin/adminAddEvent.html
+++ b/Admin/adminAddEvent.html
@@ -7,6 +7,8 @@
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/adminstyle.css">
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/datedropper.css">
         <title>Admin Dashboard</title>
     </head>
 
@@ -24,12 +26,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -205,14 +207,14 @@
                                     <div class="row mb-3">
                                         <div class="col-md-6 px-5">
                                             <div class="form-group">
-                                                <label for="eventName" class="text-muted">Date</label>
+                                                <label for="date-input" class="text-muted">Date</label>
                                                 <br>
-                                                <input type="text" id="date-input" class="form-control eventName datedropper-init" placeholder="Event Name" data-datedropper required>
+                                                <input type="text" id="date-input" class="form-control eventName " data-large-mode="true" data-large-default="true" data-lock="from" data-theme="leaf" required>
                                             </div>
                                         </div>
                                         <div class="col-md-6 px-5">
-                                            <label for="eventDescription" class="text-muted">Time</label>
-                                            <input type="time" id="eventName" class="form-control eventName" placeholder="Event Name" required>
+                                            <label for="eventTIme" class="text-muted">Time</label>
+                                            <input type="time" id="eventTIme" class="form-control " placeholder="Event Name" required>
                                         </div>
                                     </div>
                                 </div>
@@ -224,9 +226,9 @@
                                     <div class="row mb-3">
                                         <div class="col-md-7 ml-4">
                                             <div class="form-group">
-                                                <label for="eventName" class="text-muted">Location</label>
+                                                <label for="eventVenue" class="text-muted">Location</label>
                                                 <br>
-                                                <input type="text" id="eventName" class="form-control eventName" placeholder="Location of event" required>
+                                                <input type="text" id="eventVenue" class="form-control eventName" placeholder="Location of event" required>
                                             </div>
                                         </div>
                                         <div class="col-md-5"></div>
@@ -234,17 +236,13 @@
                                 </div>
 
                                 <!--About Your Event-->
-                                <div class="card mt-5 mr-md-5 ml-md-5 mb-3">
+                                <div class="card mt-5 mr-md-5 ml-md-5 mb-3 aboutEvent">
                                     <h3 class="card-title mt-3 ml-3">About Your Event</h3>
                                     <hr class="mt-2">
-                                    <div class="row mb-3">
-                                        <div class="col-md-9 ml-4">
-                                            <div class="form-group">
-                                                <label for="eventDescription" class="text-muted">What is the event about? (Full description of the event)</label>
-                                                <textarea id="eventDescription" rows="4" class="form-control" placeholder="Event Description" required></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-3"></div>
+                                    <div class="container-fluid px-4 editor">
+                                        <div id="editor">
+                                            
+                                          </div>
                                     </div>
                                 </div>
 
@@ -285,6 +283,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/functionality.js"></script>
+    <script src="js/datedropper.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyA0SphiRNYxtUOX517aZbPXJYvxXC4UepU"></script>
+    <script src="https://github.com/ericjgagnon/wickedpicker.git"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script>
+        var quill = new Quill('#editor', {
+          theme: 'snow'
+        });
 
+        $('#date-input').dateDropper();
+
+        $('.timepicker').wickedpicker('time');
+    </script>
 </html>
