--- a/Admin/adminBlog.html
+++ b/Admin/adminBlog.html
@@ -24,12 +24,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 current">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        The Scolio Talk
+                                        The ScolioTalk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -167,7 +167,7 @@
                             <div class="row">
                                 <!--Article Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="blog-img" class="img-fluid">
                                 </div>
                                 <!--Article Details-->
                                 <div class="col-sm-8 d-flex justify-content-between">
@@ -200,7 +200,7 @@
                             <div class="row">
                                 <!--Article Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="blog-img" class="img-fluid">
                                 </div>
                                 <!--Article Details-->
                                 <div class="col-sm-8 d-flex justify-content-between">
@@ -233,7 +233,7 @@
                             <div class="row">
                                 <!--Article Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="blog-img" class="img-fluid">
                                 </div>
                                 <!--Article Details-->
                                 <div class="col-sm-8 d-flex justify-content-between">
@@ -266,7 +266,7 @@
                             <div class="row">
                                 <!--Article Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="blog-img" class="img-fluid">
                                 </div>
                                 <!--Article Details-->
                                 <div class="col-sm-8 d-flex justify-content-between">
