--- a/Admin/adminDashboard.html
+++ b/Admin/adminDashboard.html
@@ -24,12 +24,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        The Scolio Talk
+                                        The ScolioTalk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-        <!--Cards-->
+        <!--Top Cards-->
         <section class="section-1">
             <div class="container-fluid">
                 <div class="row">
@@ -157,7 +157,7 @@
                                         <div class="d-flex justify-content-between">
                                             <i class="fas fa-hand-holding-usd fa-3x text-success"></i>
                                             <div class="text-right text-secondary">
-                                                <h5>Donations</h5>
+                                                <h5>Total Donations 2020</h5>
                                                 <h3>KES <span class="donationAmount">135,000</span></h3>
                                             </div>
                                         </div>
@@ -178,7 +178,7 @@
                                         <div class="d-flex justify-content-between">
                                             <i class="fas fa-money-bill-alt fa-3x text-success"></i>
                                             <div class="text-right text-secondary">
-                                                <h5>Expenses</h5>
+                                                <h5>Total Expenses 2020</h5>
                                                 <h3>KES 135,000</h3>
                                             </div>
                                         </div>
@@ -329,12 +329,6 @@
                                             <a href="#" class="page-link py-2 px-3">1</a>
                                         </li>
                                         <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">2</a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">3</a>
-                                        </li>
-                                        <li class="page-item">
                                             <a href="#" class="page-link py-2 px-3">
                                                 <span>&raquo;</span>
                                             </a>
@@ -351,6 +345,7 @@
                                         <tr class="text-muted">
                                             <th>#</th>
                                             <th>Name</th>
+                                            <th>Category</th>
                                             <th>Price</th>
                                             <th>Date</th>
                                             <th>Status</th>
@@ -360,6 +355,7 @@
                                         <tr>
                                             <th>1</th>
                                             <td>Monica</td>
+                                            <td>Resource Centre</td>
                                             <td>KES 2,000</td>
                                             <td>25/05/2020</td>
                                             <td>
@@ -369,6 +365,7 @@
                                         <tr>
                                             <th>2</th>
                                             <td>Nick</td>
+                                            <td>Resource Centre</td>
                                             <td>KES 2,000</td>
                                             <td>25/05/2020</td>
                                             <td>
@@ -378,6 +375,7 @@
                                         <tr>
                                             <th>3</th>
                                             <td>Alex</td>
+                                            <td>Resource Centre</td>
                                             <td>KES 2,000</td>
                                             <td>25/05/2020</td>
                                             <td>
@@ -387,6 +385,7 @@
                                         <tr>
                                             <th>4</th>
                                             <td>Jane</td>
+                                            <td>Resource Centre</td>
                                             <td>KES 2,000</td>
                                             <td>25/05/2020</td>
                                             <td>
@@ -396,6 +395,7 @@
                                         <tr>
                                             <th>5</th>
                                             <td>Kate</td>
+                                            <td>Resource Centre</td>
                                             <td>KES 2,000</td>
                                             <td>25/05/2020</td>
                                             <td>
@@ -413,13 +413,8 @@
                                                 <span>&laquo;</span>
                                             </a>
                                         </li>
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">1</a>
-                                        </li>
                                         <li class="page-item active">
-                                            <a href="#" class="page-link py-2 px-3">2</a>
-                                        </li><li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">3</a>
+                                            <a href="#" class="page-link py-2 px-3">1</a>
                                         </li>
                                         <li class="page-item">
                                             <a href="#" class="page-link py-2 px-3">
